--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@ about: 'about.html'
 
 <header class="main-header {% if site.cover %}" style="background-image: url({{ site.cover }}) {%else%}no-cover{% endif %}">
     <nav class="main-nav overlay clearfix">
-            {% if site.logo %}
-                <a class="blog-logo" href="{{ site.baseurl }}">
-                    <img src="{{ site.logo }}" alt="Blog Logo" />
-                </a>
-            {% endif %}
-        <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
+        {%if site.logo %}<a class="blog-logo" href="{{site.url}}"><img src="{{site.logo}}" alt="{{site.name}}" /></a>{% endif %}
+        {%if site.navigation %}
+            <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
+        {% endif %}
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
